; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-w90x900/extr_time.c_nuc900_clockevent_setnextevent.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-w90x900/extr_time.c_nuc900_clockevent_setnextevent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 }

@REG_TICR0 = common dso_local global i32 0, align 4
@REG_TCSR0 = common dso_local global i32 0, align 4
@COUNTEN = common dso_local global i32 0, align 4
@INTEN = common dso_local global i32 0, align 4
@PRESCALE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.clock_event_device*)* @nuc900_clockevent_setnextevent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nuc900_clockevent_setnextevent(i64 %0, %struct.clock_event_device* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.clock_event_device*, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store %struct.clock_event_device* %1, %struct.clock_event_device** %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = trunc i64 %6 to i32
  %8 = load i32, i32* @REG_TICR0, align 4
  %9 = call i32 @__raw_writel(i32 %7, i32 %8)
  %10 = load i32, i32* @REG_TCSR0, align 4
  %11 = call i32 @__raw_readl(i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* @COUNTEN, align 4
  %13 = load i32, i32* @INTEN, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @PRESCALE, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* %5, align 4
  %18 = or i32 %17, %16
  store i32 %18, i32* %5, align 4
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @REG_TCSR0, align 4
  %21 = call i32 @__raw_writel(i32 %19, i32 %20)
  ret i32 0
}

declare dso_local i32 @__raw_writel(i32, i32) #1

declare dso_local i32 @__raw_readl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
